# Gendiff-2-files

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
difference_calculator/: __init__.py  gendiff.py  generate_diff.py  open_check_file.py  parser.py  pipeline.py  stylish.py
difference_calculator/scripts/: gendiff.py
gendiff/: __init__.py  file_conversion.py  gen_diff.py  gendiff.py  parser.py  pipeline.py
gendiff/cli/: cli.py  file_conversion.py  open_check_file.py
gendiff/diff_work/: gendiff.py  pipeline.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: f1.json  f1_equal.json  f2.json  f2.txt  f2_full_diff.json  result.txt  result_empty_one.txt  result_equal.txt  result_flatten_txt.txt  result_full_diff.txt  result_json.txt  result_not_flatten.txt
tests/fixtures/yaml/: f1.yml  f2.yml  f2_equal.yml  f2_full_diff.yml  file1_not_flatten.yml  file2_not_flatten.yml  result.txt  result_full_diff.txt
